force-app/main/default/objects/VacationTransactions__c/VacationTransactions__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom settings is used to store the Code for the Vacation Transactions used in the Vacation Request Flows</description>
    <label>Vacation Transactions</label>
</CustomObject>