force-app/main/default/objects/VacationTransactions__c/fields/Carrier_Memo_Code__c.field-meta.xml
<CustomField>
        <fullName>Carrier_Memo_Code__c</fullName>
        <label>Carrier Memo Code</label>
        <length>3</length>
        <type>Text</type>
    </CustomField>