force-app/main/default/objects/VacationTransactions__c/fields/Error_Message__c.field-meta.xml
<CustomField>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </CustomField>