force-app/main/default/objects/VacationTransactions__c/fields/Max_Days_for_Vac_Pac__c.field-meta.xml
<CustomField>
        <fullName>Max_Days_for_Vac_Pac__c</fullName>
        <description>This field will used to store the number of max days that a Vacation Package is allowed</description>
        <inlineHelpText>Enter the Max amount of days that a Vacation Package is allowed.</inlineHelpText>
        <label>Max Days for Vac Pac</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>