force-app/main/default/objects/VacationTransactions__c/fields/Min_Days_for_complete_stop__c.field-meta.xml
<CustomField>
        <fullName>Min_Days_for_complete_stop__c</fullName>
        <description>This field is used to store the minimum days for a complete vacation stop, used to display the digital subscription offer in the vacation request flows.</description>
        <inlineHelpText>Enter the minimum days for a complete vacation stop.</inlineHelpText>
        <label>Min Days for complete stop</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>