force-app/main/default/objects/VacationTransactions__c/fields/Product_Change_Code__c.field-meta.xml
<CustomField>
        <fullName>Product_Change_Code__c</fullName>
        <label>Product Change Code</label>
        <length>4</length>
        <type>Text</type>
    </CustomField>