force-app/main/default/objects/VacationTransactions__c/fields/Vacation_Hold_Code__c.field-meta.xml
<CustomField>
        <fullName>Vacation_Hold_Code__c</fullName>
        <label>Vacation Hold Code</label>
        <length>2</length>
        <type>Text</type>
    </CustomField>