force-app/main/default/objects/VacationTransactions__c/fields/Vacation_Package_Code__c.field-meta.xml
<CustomField>
        <fullName>Vacation_Package_Code__c</fullName>
        <label>Vacation Package Code</label>
        <length>3</length>
        <type>Text</type>
    </CustomField>