force-app/main/default/objects/VacationTransactions__c/fields/Vacation_Shore_Move__c.field-meta.xml
<CustomField>
        <fullName>Vacation_Shore_Move__c</fullName>
        <label>Vacation Shore Move</label>
        <length>3</length>
        <type>Text</type>
    </CustomField>